[gd_scene load_steps=6 format=3 uid="uid://d1o0yk1d6m631"]

[ext_resource type="Script" uid="uid://cdtla6re5yeul" path="res://mainmenu/mainmenu.gd" id="1_wgsso"]
[ext_resource type="Texture2D" uid="uid://b3bv0fb0cu3gk" path="res://sets/ui/volume_button.png" id="2_igs2m"]
[ext_resource type="Texture2D" uid="uid://brkqmw8y4pw0m" path="res://sets/ui/exit.png" id="2_y3h2u"]
[ext_resource type="Texture2D" uid="uid://c7txvhk052osp" path="res://sets/ui/gear.png" id="3_3pujl"]
[ext_resource type="Texture2D" uid="uid://cjd5kq7ds7fk8" path="res://sets/texture/achievement.png" id="4_wttv0"]

[node name="mainmenu" type="Node2D"]
script = ExtResource("1_wgsso")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 400.0

[node name="ui" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="volume_buatton" type="Control" parent="Control/ui"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ui/volume_buatton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="exit" type="TextureButton" parent="Control/ui/volume_buatton/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
texture_normal = ExtResource("2_y3h2u")
texture_pressed = ExtResource("2_y3h2u")
texture_hover = ExtResource("2_y3h2u")
stretch_mode = 0

[node name="Control" type="Control" parent="Control/ui/volume_buatton/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="volume" type="TextureButton" parent="Control/ui/volume_buatton/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
texture_normal = ExtResource("2_igs2m")
texture_pressed = ExtResource("2_igs2m")
texture_hover = ExtResource("2_igs2m")
stretch_mode = 0

[node name="option" type="VBoxContainer" parent="Control/ui"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Control/ui/option"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="Label" type="Label" parent="Control/ui/option/Control"]
self_modulate = Color(0, 1, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "SNAKE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="option" type="HBoxContainer" parent="Control/ui/option"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="Control/ui/option/option"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ui/option/option"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="classic" type="Button" parent="Control/ui/option/option/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "经典"

[node name="rogulike" type="Button" parent="Control/ui/option/option/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "roguelike"

[node name="Button3" type="Button" parent="Control/ui/option/option/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "待续"

[node name="Control2" type="Control" parent="Control/ui/option/option"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Control2" type="Control" parent="Control/ui/option"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Control2" type="Control" parent="Control/ui"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="gear" type="VBoxContainer" parent="Control/ui/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="achievement" type="TextureButton" parent="Control/ui/Control2/gear"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
texture_normal = ExtResource("4_wttv0")
texture_pressed = ExtResource("4_wttv0")
texture_hover = ExtResource("4_wttv0")
stretch_mode = 0

[node name="Control" type="Control" parent="Control/ui/Control2/gear"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="settings2" type="TextureButton" parent="Control/ui/Control2/gear"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
texture_normal = ExtResource("3_3pujl")
texture_pressed = ExtResource("3_3pujl")
texture_hover = ExtResource("3_3pujl")
stretch_mode = 0

[node name="classic_mode" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="classic_mode"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="classic_mode/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="classic_mode/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="VBoxContainer" type="VBoxContainer" parent="classic_mode/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="Control" type="Control" parent="classic_mode/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Label" type="Label" parent="classic_mode/Control/HBoxContainer/VBoxContainer/Control"]
self_modulate = Color(0.941573, 0.680712, 0.300678, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "游戏模式"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="classic_mode/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="ordered" type="Button" parent="classic_mode/Control/HBoxContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 0.741176, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "守序"

[node name="random" type="Button" parent="classic_mode/Control/HBoxContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(0.65098, 1, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "无序"

[node name="Control2" type="Control" parent="classic_mode/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Control2" type="Control" parent="classic_mode/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[connection signal="pressed" from="Control/ui/volume_buatton/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Control/ui/volume_buatton/VBoxContainer/volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="Control/ui/option/option/VBoxContainer/classic" to="." method="_on_test_pressed"]
[connection signal="pressed" from="Control/ui/Control2/gear/achievement" to="." method="_on_achievement_pressed"]
[connection signal="pressed" from="classic_mode/Control/HBoxContainer/VBoxContainer/HBoxContainer/ordered" to="." method="_on_ordered_pressed"]
[connection signal="pressed" from="classic_mode/Control/HBoxContainer/VBoxContainer/HBoxContainer/random" to="." method="_on_random_pressed"]
